# taidot

./: .gitignore  LICENSE  README.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  myjourneys.js  page.js
frontend/app/components/: AuthLayout.js  JourneyModal.js  Navbar.js  RoadmapStepper.js  searchPrograms.js
frontend/app/journey/[id]/: page.js
frontend/app/myjourneys/: page.js
frontend/app/searchresults/: page.js
frontend/app/signin/: page.js
frontend/app/signup/: page.js
frontend/app/todos/: page.js
frontend/app/welcome/: page.js
taidot/: pyproject.toml  taidot.db
taidot/api/: app.py
taidot/api/routes/: journey.py  search_programs.py  search_resources.py  todos.py  user.py
taidot/database/: models.py
taidot/database/schema/: __init__.py  journey.py  user.py
